responsive nabar added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- use  ` npx @tailwindcss/cli -i ./src/input.css -o ./dist/output.css --watch ` each time coding-->
+<!-- use npm run dev -->
 <!doctype html>
 <html lang="en">
   <head>
