saas landing page

--- a/version-3.html
+++ b/version-3.html
@@ -6,7 +6,7 @@
     <title>learn</title>
     <link href="./dist/output.css" rel="stylesheet" />
 </head>
-<body>
+<body class="bg-[rgb(15,23,41)]">
    
 </body>
 </html>
