--- a/payment-plan.html
+++ b/payment-plan.html
@@ -28,8 +28,8 @@
         <a href="#" class="py-3 w-full border rounded-2xl hover:bg-gray-400/10"
           >Buy plan</a
         >
-        <ul class="space-y-3 text-left">
-          <li class="flex items-center space-x-3">
+        <ul class="space-y-3 items-center text-left">
+          <li class="flex  space-x-3 ">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -44,7 +44,6 @@
                 d="m4.5 12.75 6 6 9-13.5"
               />
             </svg>
-
             <span>All basic features</span>
           </li>
           <li class="flex items-center space-x-3">
